--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,11 @@
 <resources>
     <string name="app_name">PubliciteExamples</string>
     <string name="action_settings">Settings</string>
+
+    <string name="title">Publicite Ads Types</string>
+    <string name="bt_native">Native / Embedded Ads</string>
+    <string name="bt_full_page">Full Page Ads</string>
+    <string name="bt_slider">Slider Ads</string>
+    <string name="bt_banner">Banner Ads</string>
+    <string name="title_activity_slider">SliderActivity</string>
 </resources>
